--- a/week_7/public/index.html
+++ b/week_7/public/index.html
@@ -29,12 +29,9 @@
     <section class="section">
         <div class="container is-max-desktop" style="text-align: center;">
             <h1 class="is-size-1 title">CSI Week 7 Assignment</h1>
-            <h2 class="subtitle">Express server with basic <strong>Routing</strong> and <strong>Middlewares</strong></h2>
+            <h2 class="subtitle">Express server with <strong>basic authentication</strong> using <strong>JWT</strong></h2>
             <textarea id="jsonInput" class="textarea mt-5"
-                placeholder='Enter JSON, e.g., {"username": "testuser"}' rows="3">
-{
-    "username": "testuser"
-}</textarea>
+                placeholder='Enter JSON, e.g., {"username": "testuser"}' rows="3">{"username": "testuser"}</textarea>
             <div class="container fixed-grid has-2-cols mt-3 p-2">
                 <div class="grid">
                     <button class="button cell is-primary" id="loginButton">Login</button>
